--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Profile Sekolah</string>
+    <string name="txt_name">Gathan Naufarrel A.</string>
+    <string name="txt_email">Email:gathanakhtar@gmail.com</string>
+    <string name="content_img_profile">Image Profile</string>
 </resources>
